parser/Absyn.h

typedef char* LVar;
struct AttrVal_;
typedef struct AttrVal_ *AttrVal;
struct AttrName_;
typedef struct AttrName_ *AttrName;
struct Attr_;
typedef struct Attr_ *Attr;
struct ListAttr_;
typedef struct ListAttr_ *ListAttr;
struct Vertex_;
struct Name_;
typedef struct Name_ *Name;
struct AttrVal_
{
  enum { is_AttributeValue } kind;
  union
  {
    struct { LVar lvar_; } attributeValue_;
  } u;
};
AttrVal make_AttributeValue(LVar p0);
struct AttrName_
{
  enum { is_AttributeName } kind;
  union
  {
    struct { LVar lvar_; } attributeName_;
  } u;
};
AttrName make_AttributeName(LVar p0);
struct Attr_
{
  enum { is_AttributePair } kind;
  union
  {
    struct { AttrName attrname_; AttrVal attrval_; } attributePair_;
  } u;
};
Attr make_AttributePair(AttrName p0, AttrVal p1);
struct ListAttr_
{
  enum { is_EmptyAttrList, is_AttrList } kind;
  union
  {
    struct { Attr attr_; ListAttr listattr_; } attrList_;
  } u;
};
ListAttr make_EmptyAttrList(void);
ListAttr make_AttrList(Attr p0, ListAttr p1);
struct Vertex_
{
  enum { is_VName } kind;
  union
  {
    struct { ListAttr listattr_; Name name_; } vName_;
  } u;
};
struct Name_
{
  enum { is_NameWildcard, is_NameVVar, is_NameGVar, is_NameQuoteGraph, is_NameQuoteVertex } kind;
  union
  {
    struct { LVar lvar_; } nameVVar_;
    struct { UVar uvar_; } nameGVar_;
    struct { Graph graph_; } nameQuoteGraph_;
    struct { Vertex vertex_; } nameQuoteVertex_;
  } u;
};