src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrVal___bindgen_ty_2"][::std::mem::size_of::<AttrVal___bindgen_ty_2>() - 8usize];
    ["Alignment of AttrVal___bindgen_ty_2"]
        [::std::mem::align_of::<AttrVal___bindgen_ty_2>() - 8usize];
    ["Offset of field: AttrVal___bindgen_ty_2::attributeValue_"]
        [::std::mem::offset_of!(AttrVal___bindgen_ty_2, attributeValue_) - 0usize];
};
impl Default for AttrVal___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrVal_"][::std::mem::size_of::<AttrVal_>() - 16usize];
    ["Alignment of AttrVal_"][::std::mem::align_of::<AttrVal_>() - 8usize];
    ["Offset of field: AttrVal_::kind"][::std::mem::offset_of!(AttrVal_, kind) - 0usize];
    ["Offset of field: AttrVal_::u"][::std::mem::offset_of!(AttrVal_, u) - 8usize];
};
impl Default for AttrVal_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_AttributeValue(p0: LVar) -> AttrVal;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct AttrName_ {
    pub kind: AttrName___bindgen_ty_1,
    pub u: AttrName___bindgen_ty_2,
}
pub const AttrName__is_AttributeName: AttrName___bindgen_ty_1 = 0;
pub type AttrName___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union AttrName___bindgen_ty_2 {
    pub attributeName_: AttrName___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AttrName___bindgen_ty_2__bindgen_ty_1 {
    pub lvar_: LVar,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrName___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<AttrName___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Alignment of AttrName___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<AttrName___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: AttrName___bindgen_ty_2__bindgen_ty_1::lvar_"]
        [::std::mem::offset_of!(AttrName___bindgen_ty_2__bindgen_ty_1, lvar_) - 0usize];
};
impl Default for AttrName___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrName___bindgen_ty_2"][::std::mem::size_of::<AttrName___bindgen_ty_2>() - 8usize];
    ["Alignment of AttrName___bindgen_ty_2"]
        [::std::mem::align_of::<AttrName___bindgen_ty_2>() - 8usize];
    ["Offset of field: AttrName___bindgen_ty_2::attributeName_"]
        [::std::mem::offset_of!(AttrName___bindgen_ty_2, attributeName_) - 0usize];
};
impl Default for AttrName___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrName_"][::std::mem::size_of::<AttrName_>() - 16usize];
    ["Alignment of AttrName_"][::std::mem::align_of::<AttrName_>() - 8usize];
    ["Offset of field: AttrName_::kind"][::std::mem::offset_of!(AttrName_, kind) - 0usize];
    ["Offset of field: AttrName_::u"][::std::mem::offset_of!(AttrName_, u) - 8usize];
};
impl Default for AttrName_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_AttributeName(p0: LVar) -> AttrName;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Attr_ {
    pub kind: Attr___bindgen_ty_1,
    pub u: Attr___bindgen_ty_2,
}
pub const Attr__is_AttributePair: Attr___bindgen_ty_1 = 0;
pub type Attr___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union Attr___bindgen_ty_2 {
    pub attributePair_: Attr___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Attr___bindgen_ty_2__bindgen_ty_1 {
    pub attrname_: AttrName,
    pub attrval_: AttrVal,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Attr___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<Attr___bindgen_ty_2__bindgen_ty_1>() - 16usize];
    ["Alignment of Attr___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<Attr___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: Attr___bindgen_ty_2__bindgen_ty_1::attrname_"]
        [::std::mem::offset_of!(Attr___bindgen_ty_2__bindgen_ty_1, attrname_) - 0usize];
    ["Offset of field: Attr___bindgen_ty_2__bindgen_ty_1::attrval_"]
        [::std::mem::offset_of!(Attr___bindgen_ty_2__bindgen_ty_1, attrval_) - 8usize];
};
impl Default for Attr___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Attr___bindgen_ty_2"][::std::mem::size_of::<Attr___bindgen_ty_2>() - 16usize];
    ["Alignment of Attr___bindgen_ty_2"][::std::mem::align_of::<Attr___bindgen_ty_2>() - 8usize];
    ["Offset of field: Attr___bindgen_ty_2::attributePair_"]
        [::std::mem::offset_of!(Attr___bindgen_ty_2, attributePair_) - 0usize];
};
impl Default for Attr___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Attr_"][::std::mem::size_of::<Attr_>() - 24usize];
    ["Alignment of Attr_"][::std::mem::align_of::<Attr_>() - 8usize];
    ["Offset of field: Attr_::kind"][::std::mem::offset_of!(Attr_, kind) - 0usize];
    ["Offset of field: Attr_::u"][::std::mem::offset_of!(Attr_, u) - 8usize];
};
impl Default for Attr_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_AttributePair(p0: AttrName, p1: AttrVal) -> Attr;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ListAttr_ {
    pub kind: ListAttr___bindgen_ty_1,
    pub u: ListAttr___bindgen_ty_2,
}
pub const ListAttr__is_EmptyAttrList: ListAttr___bindgen_ty_1 = 0;
pub const ListAttr__is_AttrList: ListAttr___bindgen_ty_1 = 1;
pub type ListAttr___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union ListAttr___bindgen_ty_2 {
    pub attrList_: ListAttr___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ListAttr___bindgen_ty_2__bindgen_ty_1 {
    pub attr_: Attr,
    pub listattr_: ListAttr,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ListAttr___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<ListAttr___bindgen_ty_2__bindgen_ty_1>() - 16usize];
    ["Alignment of ListAttr___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<ListAttr___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: ListAttr___bindgen_ty_2__bindgen_ty_1::attr_"]
        [::std::mem::offset_of!(ListAttr___bindgen_ty_2__bindgen_ty_1, attr_) - 0usize];
    ["Offset of field: ListAttr___bindgen_ty_2__bindgen_ty_1::listattr_"]
        [::std::mem::offset_of!(ListAttr___bindgen_ty_2__bindgen_ty_1, listattr_) - 8usize];
};
impl Default for ListAttr___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ListAttr___bindgen_ty_2"][::std::mem::size_of::<ListAttr___bindgen_ty_2>() - 16usize];
    ["Alignment of ListAttr___bindgen_ty_2"]
        [::std::mem::align_of::<ListAttr___bindgen_ty_2>() - 8usize];
    ["Offset of field: ListAttr___bindgen_ty_2::attrList_"]
        [::std::mem::offset_of!(ListAttr___bindgen_ty_2, attrList_) - 0usize];
};
impl Default for ListAttr___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ListAttr_"][::std::mem::size_of::<ListAttr_>() - 24usize];
    ["Alignment of ListAttr_"][::std::mem::align_of::<ListAttr_>() - 8usize];
    ["Offset of field: ListAttr_::kind"][::std::mem::offset_of!(ListAttr_, kind) - 0usize];
    ["Offset of field: ListAttr_::u"][::std::mem::offset_of!(ListAttr_, u) - 8usize];
};
impl Default for ListAttr_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_EmptyAttrList() -> ListAttr;
}
unsafe extern "C" {
    pub fn make_AttrList(p0: Attr, p1: ListAttr) -> ListAttr;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Vertex_ {
    pub kind: Vertex___bindgen_ty_1,
    pub u: Vertex___bindgen_ty_2,
}
pub const Vertex__is_VName: Vertex___bindgen_ty_1 = 0;
pub type Vertex___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union Vertex___bindgen_ty_2 {
    pub vName_: Vertex___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Vertex___bindgen_ty_2__bindgen_ty_1 {
    pub listattr_: ListAttr,
    pub name_: Name,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Vertex___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<Vertex___bindgen_ty_2__bindgen_ty_1>() - 16usize];
    ["Alignment of Vertex___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<Vertex___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: Vertex___bindgen_ty_2__bindgen_ty_1::listattr_"]
        [::std::mem::offset_of!(Vertex___bindgen_ty_2__bindgen_ty_1, listattr_) - 0usize];
    ["Offset of field: Vertex___bindgen_ty_2__bindgen_ty_1::name_"]
        [::std::mem::offset_of!(Vertex___bindgen_ty_2__bindgen_ty_1, name_) - 8usize];
};
impl Default for Vertex___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
